Fix problem with com.apple.laf for macApp
error message was (package com.apple.laf is declared
in module java.desktop, which does not export it)
Changes were needed to build.sbt
To do the export,  macApp javacOptions needed
" --add-exports java.desktop/com.apple.laf=ALL-UNNAMED"
However this was incompatible with jvmSettings javacOptions --release
which was replaced by "-source 11 -target 11"